# convexgeometry

./: .LICENSE.swp  .gitignore  README.md  setup.cfg  setup.py
convexgeometry/: optimization.py  walks.py
convexgeometry_jtanderson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: zonotope.py
