[metadata]
name = convexgeometry
version = 0.0.2
author = Joseph Anderson
author_email = jtanderson@salisbury.edu
description = A collection of algorithms for membership and sampling of convex sets
long_description = file: README.md
#long_description_content_type = "text/markdown"
url = https://github.com/jtanderson/convexgeometry
project_urls =
  Bug Tracker = https://github.com/jtanderson/convexgeometry/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
